# mcp-korea-tourism-api

./: Dockerfile  README.ko.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
mcp_tourism/: api_client.py  server.py
mcp_tourism/hosts/: cursor.py
src/mcp_tourism/: api_client.py  server.py
tests/: conftest.py  test_integration.py  test_server.py  test_transport.py
