[project]
name = "mcp-korea-tourism"
version = "0.1.0"
description = "MCP Server for Korea Tourism API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "ratelimit>=2.2.1",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "respx>=0.22.0",
]
